@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: save.c,v 1.168 2008/12/10 06:53:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: save.c,v 1.169 2008/12/11 06:53:14 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - save.c */
@@ -570,10 +570,11 @@ set encoding %s\n\
     if (splot_map == TRUE)
 	fputs("map", fp);
     else {
-	/* fprintf(fp, "%sequal_axes ", aspect_ratio_3D == 1.0 ? "" : "no"); */
 	fprintf(fp, "%g, %g, %g, %g",
 	    surface_rot_x, surface_rot_z, surface_scale, surface_zscale);
     }
+    fprintf(fp, "\nset view %s", aspect_ratio_3D == 2 ? "equal xy" :
+                                 aspect_ratio_3D == 3 ? "equal xyz": "");
 
     fprintf(fp, "\n\
 set samples %d, %d\n\
