@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: unset.c,v 1.126 2008/12/10 06:53:14 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: unset.c,v 1.127 2008/12/11 06:53:14 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - unset.c */
@@ -1454,7 +1454,7 @@ unset_view()
 {
     splot_map_deactivate();
     splot_map = FALSE;
-    aspect_ratio_3D = 0.0;
+    aspect_ratio_3D = 0;
     surface_rot_z = 30.0;
     surface_rot_x = 60.0;
     surface_scale = 1.0;
